--- a/Source Files/Assembly-CSharp.csproj
+++ b/Source Files/Assembly-CSharp.csproj
@@ -46,12 +46,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Crusher.cs" />
      <Compile Include="Assets\Scripts\DeathWave.cs" />
-     <Compile Include="Assets\Scripts\FoxV2\Controller.cs" />
-     <Compile Include="Assets\Scripts\FoxV2\Fox.cs" />
+     <Compile Include="Assets\Scripts\Fox\Controller.cs" />
+     <Compile Include="Assets\Scripts\Fox\Fox.cs" />
      <Compile Include="Assets\Scripts\ParallaxController.cs" />
      <Compile Include="Assets\Scripts\PlayScript.cs" />
      <Compile Include="Assets\Scripts\RestartLevel.cs" />
+     <Compile Include="Assets\Scripts\SawBenchBlade.cs" />
      <Compile Include="Assets\Scripts\SawBlade.cs" />
      <Compile Include="Assets\Scripts\UIController.cs" />
      <Compile Include="Assets\Scripts\objectDestroyer.cs" />
